@@ -2,6 +2,7 @@
 - Update to LibGDX 1.9.9
 - [BREAKING] UiContainer can now select a NavigationMode instead of only enabling/disabling keyboard
 - UiContainer can now have multiple navigation action keys
+- Fixed Graphics#tint not being reset each frame
 - Fixed UI navigation cursor not updating when switching between controller and mouse
 
 [1.8.2]
